<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.jboss</groupId>
        <artifactId>jboss-parent</artifactId>
        <version>27</version>
    </parent>

    <groupId>org.richfaces.cdk</groupId>
    <artifactId>aggregator</artifactId>
    <version>4.5.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>RichFaces CDK Aggregator</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- maven-compiler-plugin -->
        <!-- Overide jboss-parent default version-->
        <maven.compiler.target>10</maven.compiler.target>
        <maven.compiler.source>10</maven.compiler.source>
    </properties>

    <modules>
        <module>parent</module>
        <module>commons</module>
        <module>annotations</module>
        <module>attributes</module>
        <module>xinclude</module>
        <module>generator</module>
        <module>cmdln-generator</module>
        <module>maven-plugin</module>
        <module>test-component</module>
        <module>dist</module>
    </modules>
    <!-- SCM and distribution management -->
    <scm>
        <connection>scm:git:git://github.com/richfaces/cdk.git</connection>
        <developerConnection>scm:git:git@github.com:richfaces/cdk.git</developerConnection>
        <url>https://github.com/richfaces/cdk</url>
      <tag>HEAD</tag>
  </scm>

    <!-- Minimal build configuration -->
    <build>
        <finalName>cdk</finalName>
        <plugins>
            <plugin>
                <artifactId>maven-release-plugin</artifactId>
                <configuration>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                    <pushChanges>false</pushChanges>
                    <localCheckout>true</localCheckout>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <inherited>false</inherited>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
